force-app/main/default/objects/EDI_Message_Backup__c/EDI_Message_Backup__c.object-meta.xml
<CustomObject>
    <label>EDI Message Backup</label>
    <nameField>
        <displayFormat>PSCN-{000000}</displayFormat>
        <label>PO_Stage_Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDI Messages Backup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>