force-app/main/default/objects/EDI_Message_Backup__c/fields/DocumentBody__c.field-meta.xml
<CustomField>
    <fullName>DocumentBody__c</fullName>
    <label>DocumentBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>