force-app/main/default/objects/EDI_Message_Backup__c/fields/DocumentReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentReceiptDate__c</fullName>
    <label>DocumentReceiptDate</label>
    <type>DateTime</type>
</CustomField>