force-app/main/default/objects/EDI_Message_Backup__c/fields/DocumentReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentReferenceNumber__c</fullName>
    <label>DocumentReferenceNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>