force-app/main/default/objects/EDI_Message_Backup__c/fields/EDI_Format__c.field-meta.xml
<CustomField>
    <fullName>EDI_Format__c</fullName>
    <label>EDI Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>