force-app/main/default/objects/EDI_Message_Backup__c/fields/EDI_Message_Number__c.field-meta.xml
<CustomField>
    <fullName>EDI_Message_Number__c</fullName>
    <label>EDI Message Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>