force-app/main/default/objects/EDI_Message_Backup__c/fields/MarkedForArchival__c.field-meta.xml
<CustomField>
    <fullName>MarkedForArchival__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MarkedForArchival</label>
    <type>Checkbox</type>
</CustomField>