force-app/main/default/objects/EDI_Message_Backup__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <label>Message Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>