force-app/main/default/objects/EDI_Message_Backup__c/fields/Trading_Partner__c.field-meta.xml
<CustomField>
    <fullName>Trading_Partner__c</fullName>
    <label>Trading Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>